--- a/EllypinCustodian/package.json
+++ b/EllypinCustodian/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@types/openpgp": "^4.0.4",
     "core-js": "^2.5.4",
+    "openpgp": "^4.4.1",
     "rxjs": "~6.2.0",
+    "web3": "^0.20.5",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
