--- a/EllypinCustodian/package.json
+++ b/EllypinCustodian/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.5.4",
     "openpgp": "^4.4.1",
     "rxjs": "~6.2.0",
+    "sweetalert2": "^8.0.3",
     "web3": "^0.20.5",
     "zone.js": "~0.8.26"
   },
