--- a/EllypinCustomer/package.json
+++ b/EllypinCustomer/package.json
@@ -27,6 +27,7 @@
     "eth-crypto": "^1.3.2",
     "eth-ecies": "^1.0.3",
     "ethereum-encryption": "0.0.5",
+    "export-to-csv": "^0.2.1",
     "gpg": "^0.6.0",
     "jspdf": "^1.5.3",
     "mongodb-stitch": "^3.2.13",
